--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/style.tablet.css" media="screen and (max-width:768px)">
-    <link rel="stylesheet" href="./css/style.mobile.css" media="screen and (max-width:576px)">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="./css/style.tablet.css"
+      media="screen and (max-width:768px)"
+    />
+    <link
+      rel="stylesheet"
+      href="./css/style.mobile.css"
+      media="screen and (max-width:576px)"
+    />
 
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <title>Performance</title>
+  </head>
+  <body>
+    <section class="container">
+      <div class="element element--1">1</div>
+      <div class="element element--2">2</div>
+      <div class="element element--3">3</div>
+      <div class="element element--4">4</div>
+      <div class="element element--5">5</div>
+      <div class="element element--6">6</div>
+    </section>
+  </body>
 </html>
