--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.desktop.css" />
     <link
       rel="stylesheet"
       href="./css/style.tablet.css"
@@ -21,12 +21,12 @@
   </head>
   <body>
     <section class="container">
-      <div class="element element--1">1</div>
-      <div class="element element--2">2</div>
-      <div class="element element--3">3</div>
-      <div class="element element--4">4</div>
-      <div class="element element--5">5</div>
-      <div class="element element--6">6</div>
+      <div class="element element--1">Item 1</div>
+      <div class="element element--2">Item 2</div>
+      <div class="element element--3">Item 3</div>
+      <div class="element element--4">Item 4</div>
+      <div class="element element--5">Item 5</div>
+      <div class="element element--6">Item 6</div>
     </section>
   </body>
 </html>
