--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="./assets/favicon.png"
+    />
     <link rel="stylesheet" href="./css/style.desktop.css" />
     <link
       rel="stylesheet"
@@ -17,7 +22,7 @@
       media="screen and (max-width:576px)"
     />
 
-    <title>Performance</title>
+    <title>Style Segmentation with SASS</title>
   </head>
   <body>
     <section class="container">
